[gd_scene load_steps=6 format=2]

[ext_resource path="res://Audio/SFX/Module Not Ready.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/SFX/Dodge Thruster Activate.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/Module Ready.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Menus/ButtonPrompt.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/BoosterModule.gd" type="Script" id=5]

[node name="Dodge Thrusters" type="Node2D"]
script = ExtResource( 5 )
boost_power = 200.0
boost_duration = 0.5

[node name="DodgeRightButton" parent="." instance=ExtResource( 4 )]
visible = false
_input = "Option_2"
show_label = false

[node name="DodgeLeftButton" parent="." instance=ExtResource( 4 )]
visible = false
_input = "Option_4"
show_label = false

[node name="ButtonTapReset" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="UseCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="ReadySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -5.0
bus = "SFX"

[node name="NotReadySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 1 )
volume_db = -3.0
pitch_scale = 0.61
bus = "SFX"

[node name="ActivateSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="Button_Pressed" from="DodgeRightButton" to="." method="use_booster" binds= [ "Right" ]]
[connection signal="Button_Pressed" from="DodgeLeftButton" to="." method="use_booster" binds= [ "Left" ]]
[connection signal="timeout" from="ButtonTapReset" to="." method="reset_taps"]
[connection signal="timeout" from="UseCooldown" to="." method="cooled_down"]
